--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,1 @@
-pip install streamlit google-generativeai python-dotenv pillow gtts speechrecognition googletrans==4.0.0-rc1
+pip install streamlit==0.89.0 google-generativeai==0.1.0 python-dotenv==0.15.0 pillow==8.2.0 gtts==2.2.3 speechrecognition==3.8.1 googletrans==4.0.0-rc1
